--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </li>
                 <li>
                   <a href="" class="footer__column-link">
-                    <img src="./images/instagram_color_white.svg" alt="Instagram" class="footer__social-icon">
+                    <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
                     Instagram
                   </a>
                 </li>
