--- a/index.html
+++ b/index.html
@@ -10,137 +10,140 @@
 <body>
   <div class="page">
     <header class="header">
-      <div class="logo logo_place_header">
-        <img src="./images/logo_place_header.svg" alt="Логотип">
-      </div>
+      <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Логотип">
       <h1 class="header__title">Научиться учиться</h1>
-      <div class="header__subtitle">Какие современные и эффективные подходы к бучению вы можете использовать в своей жизни?
-        <a href="#">Узнать &rarr;</a>
-      </div>
+      <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+        <a class="header__link" href="#">Узнать &rarr;</a>
+      </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
       <div class="header__square-pic"></div>
     </header>
     <main class="content">
-      <section class="discription">
-        <div class="two-columns">
+      <section class="description" aria-label="Секция со статьей">
+        <article class="two-columns">
           <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
-          <div class="two-columns__main-text">
-            <div class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</div>
-            <div class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</div>
-            <div class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</div>
+          <div class="two-columns__main-text ">
+            <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
-        </div>
+        </article>
       </section>
       <section class="digits">
-        <h3 class="section-title">Цифры и факты</h3>
-        <div class="section-subtitle">Про учёбу и мозг</div>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <div class="table">
           <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
+            <h3 class="table__heading">86 миллиардов</h3>
+            <p class="table__text">Число нейронов в мозге человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">2.1 миллиарда</div>
-            <div class="table__text">Число нуждающихся в повышении квалификации</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
+            <h3 class="table__heading">2.1 миллиарда</h3>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объём памяти человека</div>
+            <h3 class="table__heading">1000 терабайт</h3>
+            <p class="table__text">Объём памяти человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
+            <h3 class="table__heading">500 триллионов</h3>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">420 миллионов</div>
-            <div class="table__text">Число нейронов в мозге человека Всемирный</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
+            <h3 class="table__heading">420 миллионов</h3>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">17–20 лет</div>
-            <div class="table__text">Пик обучаемости</div>
+            <h3 class="table__heading">17–20 лет</h3>
+            <p class="table__text">Пик обучаемости</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1885 год</div>
-            <div class="table__text">Открытие кривой забывания</div>
+            <h3 class="table__heading">1885 год</h3>
+            <p class="table__text">Открытие кривой забывания</p>
           </div>
           <div class="table__cell">
-            <div class="table__heading">1889 год</div>
-            <div class="table__text">Открытие условного рефлекса</div>
+            <h3 class="table__heading">1889 год</h3>
+            <p class="table__text">Открытие условного рефлекса</p>
           </div>
         </div>
       </section>
       <section class="feynman">
-        <h4 class="feynman__title">Метод Фейнмана</h4>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
       <section class="kaufman">
-        <h5 class="section-title_theme_dark">Принципы обучения</h5>
-        <div class="section-subtitle_theme_dark">от Джоша Кауфмана</div>
+        <h2 class="section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">1</div>
-            <div class="table__text_theme_dark">Выберите привлекательный проект.</div>
+            <h3 class="table__heading_theme_dark">1</h3>
+            <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">2</div>
-            <div class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
+            <h3 class="table__heading_theme_dark">2</h3>
+            <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">3</div>
-            <div class="table__text_theme_dark">Определите целевой уровень мастерства.</div>
+            <h3 class="table__heading_theme_dark">3</h3>
+            <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">4</div>
-            <div class="table__text_theme_dark">Разбейте навык на элементы.</div>
+            <h3 class="table__heading_theme_dark">4</h3>
+            <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">5</div>
-            <div class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
+            <h3 class="table__heading_theme_dark">5</h3>
+            <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">6</div>
-            <div class="table__text_theme_dark">Устраните препятствия для занятий.</div>
+            <h3 class="table__heading_theme_dark">6</h3>
+            <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">7</div>
-            <div class="table__text_theme_dark">Выделите специальное время для занятий.</div>
+            <h3 class="table__heading_theme_dark">7</h3>
+            <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">8</div>
-            <div class="table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
+            <h3 class="table__heading_theme_dark">8</h3>
+            <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">9</div>
-            <div class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
+            <h3 class="table__heading_theme_dark">9</h3>
+            <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
           </div>
           <div class="table__cell_theme_dark">
-            <div class="table__heading_theme_dark">10</div>
-            <div class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
+            <h3 class="table__heading_theme_dark">10</h3>
+            <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <img src="./images/kaufman-triangle.svg" alt="Треугольник" class="kaufman__triangle">
+        <div class="kaufman__triangle"></div>
       </section>
-      <footer class="footer">
+    </main>
+    <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column_content_copyright">
-            <div class="logo logo_place_footer">
-              <img src="./images/logo_place_footer.svg" alt="Логотип">
-            </div>
-            <div class="footer__author">&copy; Виктор Абанькин</div>
+            <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип">
+            <p class="footer__author">&copy; Виктор Абанькин</p>
           </div>
-          <div class="footer__column_content_info">
-            <div class="footer__column-heading">О Практикуме</div>
+          <nav class="footer__column_content_info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
               <ul class="footer__column-links">
-                <li class="footer__column-link">Главная</li>
-                <li class="footer__column-link">Концепция</li>
-                <li class="footer__column-link">Наставники</li>
+                <li class="footer__column-link">
+                  <a href="#" class="footer__column-link">Главная</a>
+                </li>
+                <li class="footer__column-link">
+                  <a href="#" class="footer__column-link">Концепция</a>
+                </li>
+                <li class="footer__column-link">
+                  <a href="#" class="footer__column-link">Наставники</a>
+                </li>
               </ul>
-          </div>
+          </nav>
           <div class="footer__column_content_social">
-            <div class="footer__column-heading">Соцсети</div>
+            <h3 class="footer__column-heading">Соцсети</h3>
               <ul class="footer__column-links">
                 <li>
                   <a class="footer__column-link" href="#">
@@ -149,13 +152,13 @@
                   </a>
                 </li>
                 <li>
-                  <a href="" class="footer__column-link">
+                  <a  class="footer__column-link" href="#">
                     <img src="./images/vk_color_white.svg" alt="ВКонтакте" class="footer__social-icon">
                     ВКонтакте
                   </a>
                 </li>
                 <li>
-                  <a href="" class="footer__column-link">
+                  <a  class="footer__column-link" href="#">
                     <img src="./images/instagram_color_white.svg" alt="Инстаграм" class="footer__social-icon">
                     Instagram
                   </a>
@@ -163,8 +166,7 @@
             </ul>
           </div>
         </div>
-      </footer>
-    </main>
+    </footer>
   </div>
 </body>
 </html>
