--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo_place_header" src="./images/logo_place_header.svg" alt="Логотип">
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип">
       <h1 class="header__title">Научиться учиться</h1>
       <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
         <a class="header__link" href="#">Узнать &rarr;</a>
@@ -75,8 +75,8 @@
         <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
       <section class="kaufman">
-        <h2 class="section-title_theme_dark">Принципы обучения</h2>
-        <p class="section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <div class="table table_theme_dark">
           <div class="table__cell_theme_dark">
             <h3 class="table__heading_theme_dark">1</h3>
@@ -124,25 +124,25 @@
     </main>
     <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип">
             <p class="footer__author">&copy; Виктор Абанькин</p>
           </div>
-          <nav class="footer__column_content_info">
+          <nav class="footer__column footer__column_content_info">
             <h3 class="footer__column-heading">О Практикуме</h3>
               <ul class="footer__column-links">
-                <li class="footer__column-link">
+                <li>
                   <a href="#" class="footer__column-link">Главная</a>
                 </li>
-                <li class="footer__column-link">
+                <li>
                   <a href="#" class="footer__column-link">Концепция</a>
                 </li>
-                <li class="footer__column-link">
+                <li>
                   <a href="#" class="footer__column-link">Наставники</a>
                 </li>
               </ul>
           </nav>
-          <div class="footer__column_content_social">
+          <div class="footer__column footer__column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
               <ul class="footer__column-links">
                 <li>
