--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <img src="" alt="" class="khan__book-pic">
+            <img src="./images/khan-book.jpg" alt="Обложка книги" class="khan__book-pic">
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
         </div>
@@ -176,7 +176,17 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle header__square-pic_rotation"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+        <div class="resources__logo-zone">
+          <a href="#"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__link"></a>
+          <a href="#"><img src="./images/logo/resources-n1.svg" alt="Н+1" class="resources__link"></a>
+          <a href="#"><img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__link"></a>
+          <a href="#"><img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__link"></a>
+        </div>
       </section>
     </main>
     <footer class="footer">
