--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
         <div class="cards">
           <div class="cards__item">
             <img src="./images/cards-attention.png" alt="Два вида внимания" class="cards__image">
-            <h3 class="cards__title table__heading">Два вида внимания</h3>
+            <h3 class="cards__title">Два вида внимания</h3>
             <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-recall.png" alt="Рекол" class="cards__image">
-            <h3 class="cards__title table__heading">Recall</h3>
+            <h3 class="cards__title">Recall</h3>
             <p class="cards__description">Вспоминайте изученное — это позволит соединить разрозненные порции памяти.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-interliving.png" alt="Интерливинг" class="cards__image">
-            <h3 class="cards__title table__heading">Интерливинг</h3>
+            <h3 class="cards__title">Интерливинг</h3>
             <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-question.png" alt="Вопросы" class="cards__image">
-            <h3 class="cards__title table__heading">Вопросы</h3>
+            <h3 class="cards__title">Вопросы</h3>
             <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
           </div>
           <div class="cards__item">
             <img src="./images/cards-competence.png" alt="Иллюзия компетентности" class="cards__image">
-            <h3 class="cards__title table__heading">Иллюзия компетентности</h3>
+            <h3 class="cards__title">Иллюзия компетентности</h3>
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </div>
         </div>
@@ -176,7 +176,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle header__square-pic_rotation"></div>
+        <div class="kaufman__triangle"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
