--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a class="header__link" href="#">Узнать &rarr;</a>
       </p>
       <img class="header__main-illustration" src="./images/header-image.png" alt="Опять двойка">
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
     </header>
     <main class="content">
       <section class="description" aria-label="Секция со статьей">
@@ -178,13 +178,13 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </div>
         </div>
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__link"></a>
+          <a href="#" class="resources__link"><img src="./images/logo/resources-arzamas.svg" alt="Арзамас" class="resources__logo"></a>
           <a href="#" class="resources__link"><img src="./images/logo/resources-n1.svg" alt="Н+1" class="resources__logo"></a>
           <a href="#" class="resources__link"><img src="./images/logo/resources-strelka.svg" alt="Стрелка" class="resources__logo"></a>
           <a href="#" class="resources__link"><img src="./images/logo/resources-polka.svg" alt="Полка" class="resources__logo"></a>
